Servicio de E-mail funcional en el comentario, con la excepcion del envío al emisor del comentario

--- a/Futbapp/Web.config
+++ b/Futbapp/Web.config
@@ -10,7 +10,7 @@
   </configSections>
     <connectionStrings>
     <add name="FutbappContexto"
-         connectionString="Data Source=Futbapp;Initial Catalog=FutbappContexto;
+         connectionString="Data Source=.\SQLEXPRESS;Initial Catalog=FutbApp;
          Integrated Security=True;Connect Timeout=15;
          Encrypt=False;TrustServerCertificate=False"
          providerName="System.Data.SqlClient"/>
