--- a/Futbapp/Web.config
+++ b/Futbapp/Web.config
@@ -9,7 +9,7 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
     <connectionStrings>
-    <add name="FutbappContexto"
+    <add name="FutbappContext"
          connectionString="Data Source=.\SQLEXPRESS;Initial Catalog=FutbApp;
          Integrated Security=True;Connect Timeout=15;
          Encrypt=False;TrustServerCertificate=False"
