--- a/Futbapp/Futbapp.csproj
+++ b/Futbapp/Futbapp.csproj
@@ -154,6 +154,15 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201707200530507_InitialCreate.cs" />
+    <Compile Include="Migrations\201707200530507_InitialCreate.Designer.cs">
+      <DependentUpon>201707200530507_InitialCreate.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201707240022431_ActualizarUsuarios.cs" />
+    <Compile Include="Migrations\201707240022431_ActualizarUsuarios.Designer.cs">
+      <DependentUpon>201707240022431_ActualizarUsuarios.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\Comentarista.cs" />
     <Compile Include="Models\Equipo.cs" />
     <Compile Include="Models\FutbappContext.cs" />
@@ -223,6 +232,14 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Scripts\jquery-1.10.2.min.map" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Migrations\201707200530507_InitialCreate.resx">
+      <DependentUpon>201707200530507_InitialCreate.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201707240022431_ActualizarUsuarios.resx">
+      <DependentUpon>201707240022431_ActualizarUsuarios.cs</DependentUpon>
+    </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
