--- a/Futbapp/Futbapp.csproj
+++ b/Futbapp/Futbapp.csproj
@@ -204,6 +204,7 @@
     <Content Include="Scripts\respond.min.js" />
     <None Include="Views\Home\CompletarRegistro.cshtml" />
     <None Include="Views\Home\Index.cshtml" />
+    <Content Include="Scripts\validarRegistro.js" />
     <Content Include="Web.config" />
     <Content Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
