Paso a UsuarioController todo lo que tenga que ver con el Usuario

--- a/Futbapp/Futbapp.csproj
+++ b/Futbapp/Futbapp.csproj
@@ -214,7 +214,7 @@
     <Content Include="Views\Usuario\Details.cshtml" />
     <Content Include="Views\Usuario\Edit.cshtml" />
     <Content Include="Views\Usuario\Index.cshtml" />
-    <Content Include="Views\Home\MiPerfil.cshtml" />
+    <Content Include="Views\Usuario\MiPerfil.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
