--- a/Futbapp/Futbapp.csproj
+++ b/Futbapp/Futbapp.csproj
@@ -161,12 +161,15 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Models\Ciudad.cs" />
     <Compile Include="Models\Equipo.cs" />
     <Compile Include="Models\FutbappContext.cs" />
     <Compile Include="Models\Partido.cs" />
+    <Compile Include="Models\Provincia.cs" />
     <Compile Include="Models\Sala.cs" />
     <Compile Include="Models\Ubicacion.cs" />
     <Compile Include="Models\Usuario.cs" />
+    <Compile Include="Models\Zona.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
